[package]
name = "mmatamm-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.10", features = ["tokio", "gzip"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
flexi_logger = { version = "0.28.5", features = ["json", "kv"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["tokio-io", "io"] }
humantime = "2.1.0"
iex-parser = { git = "https://github.com/AmitDIRTYC0W/iex-parser-rs.git", version = "0.1.0" }
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
isahc = { version = "1.7.2", features = ["json"] }
kanal = "0.1.0-pre8"
log = { version = "0.4.21", features = ["kv", "kv_std", "kv_serde"] }
num-traits = "0.2.19"
pcap-parser = { git = "https://github.com/rusticata/pcap-parser.git", version = "0.16.0", features = ["data"] }
pin-project = "1.1.5"
pnet = "0.35.0"
questdb-rs = { version = "4.0.2", features = ["chrono_timestamp"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "io", "io-util"] }
